--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Intellectuals -- France -- Paris -- Fiction'
 - !lcsh 'Paris (France) -- Intellectual life -- 19th century -- Fiction'
+- GITenberg
 title: 'Kunstenaarsleven te Parijs: Roman uit het Bohème-leven'
 url: http://www.gutenberg.org/ebooks/35741
